signs mobile initial pass

--- a/assets/style.css
+++ b/assets/style.css
@@ -106,6 +106,15 @@ p {
   font-family: tilt-warp; }
 
 /* Layouts --------------------------------------------- */
+.small-only {
+  display: none; }
+
+@media (max-width: 599px) {
+  .large-only {
+    display: none; }
+
+  .small-only {
+    display: block; } }
 .clearfix::after {
   content: "";
   clear: both;
@@ -261,6 +270,14 @@ section.signs .nha-hang-tan-the-gioi {
       padding: 0.1em 0.3em; }
   section.signs .nha-hang-tan-the-gioi p.xs {
     letter-spacing: 0.02em; }
+  @media (max-width: 599px) {
+    section.signs .nha-hang-tan-the-gioi {
+      width: 100vw;
+      height: 80vw;
+      border-right: none; }
+      section.signs .nha-hang-tan-the-gioi .inner {
+        transform-origin: 0 0;
+        transform: translate(-100%, -100%) scale(2); } }
 section.signs .new-york-boston {
   width: 25vw;
   height: 20vw;
@@ -274,6 +291,14 @@ section.signs .twenty-four-hrs {
     border: 0.075em solid;
     border-radius: 0.2em;
     padding: 0.1em 0.2em; }
+  @media (max-width: 599px) {
+    section.signs .twenty-four-hrs {
+      width: 50vw;
+      height: 45vw;
+      border-right: none; }
+      section.signs .twenty-four-hrs .inner {
+        transform-origin: 0 0;
+        transform: translate(-125%, -125%) scale(2.5); } }
 section.signs .back-rub {
   width: 25vw;
   height: 10vw;
@@ -284,6 +309,15 @@ section.signs .back-rub {
       position: relative;
       top: -0.5em;
       padding: 0 0.125em; }
+  @media (max-width: 599px) {
+    section.signs .back-rub {
+      width: 100vw;
+      height: 40vw;
+      border-right: none;
+      border-bottom: 1px solid; }
+      section.signs .back-rub .inner {
+        transform-origin: 0 0;
+        transform: translate(-200%, -200%) scale(4); } }
 section.signs .prosperity {
   position: absolute;
   width: 33.3333333333vw;
@@ -365,6 +399,16 @@ section.signs .prosperity {
         border-radius: 0.1em;
         top: 27.6041666667%;
         box-shadow: 0 0.1em 0 0 #000; }
+  @media (max-width: 599px) {
+    section.signs .prosperity {
+      position: relative;
+      width: 100vw;
+      height: 40vw;
+      border-right: none;
+      border-right: none; }
+      section.signs .prosperity .inner {
+        transform-origin: 0 0;
+        transform: translate(-150%, -150%) scale(3); } }
 section.signs .col-hopkee {
   width: 10.5vw;
   border-right: 1px solid;
@@ -390,11 +434,30 @@ section.signs .key {
   margin-top: 13.3333333333vw;
   height: 16.6666666667vw;
   border-right: 1px solid; }
+  @media (max-width: 599px) {
+    section.signs .key {
+      margin-top: 0;
+      width: 50vw;
+      height: 45vw;
+      border-right: none;
+      border-bottom: 1px solid; }
+      section.signs .key .inner {
+        transform-origin: 0 0;
+        transform: translate(-100%, -100%) scale(2); } }
 section.signs .four-choices {
   width: 16.6666666667vw;
   height: 30vw; }
   section.signs .four-choices p.dollar {
     margin: 0 0 0.125em 0; }
+  @media (max-width: 599px) {
+    section.signs .four-choices {
+      width: 50vw;
+      height: 90vw;
+      border-right: 1px solid;
+      border-bottom: 1px solid; }
+      section.signs .four-choices .inner {
+        transform-origin: 0 0;
+        transform: translate(-150%, -150%) scale(3); } }
 section.signs .hok-shan-building {
   width: 39.5vw;
   height: 30vw; }
@@ -414,6 +477,18 @@ section.signs .grand-central {
   border-bottom: 1px solid; }
   section.signs .grand-central p {
     letter-spacing: 0.15em; }
+  @media (max-width: 599px) {
+    section.signs .grand-central {
+      width: 100vw;
+      height: 60vw;
+      border-right: none;
+      border-bottom: 1px solid; }
+      section.signs .grand-central p {
+        line-height: 95%;
+        letter-spacing: 0.05em; }
+      section.signs .grand-central .inner {
+        transform-origin: 0 0;
+        transform: translate(-125%, -125%) scale(2.5); } }
 section.signs .thirty {
   width: 25vw;
   height: 18.3333333333vw;
@@ -422,12 +497,32 @@ section.signs .thirty {
     letter-spacing: 0.05em; }
   section.signs .thirty p.num {
     line-height: 0.9em; }
+  @media (max-width: 599px) {
+    section.signs .thirty {
+      width: 50vw;
+      height: 50vw;
+      border-right: 1px solid;
+      border-bottom: 1px solid; }
+      section.signs .thirty .inner {
+        transform-origin: 0 0;
+        transform: translate(-125%, -125%) scale(2.5); } }
 section.signs .pershing {
   width: 100vw;
   height: 8.3333333333vw;
   border-bottom: 1px solid; }
   section.signs .pershing p {
     letter-spacing: 0.2em; }
+  @media (max-width: 599px) {
+    section.signs .pershing {
+      width: 100vw;
+      height: 50vw;
+      border-right: none;
+      border-bottom: none; }
+      section.signs .pershing .inner {
+        transform-origin: 0 0;
+        transform: translate(-125%, -125%) scale(2.5); }
+      section.signs .pershing p {
+        letter-spacing: 0.05em; } }
 section.signs .time {
   width: 25vw;
   height: 10vw;
@@ -540,6 +635,15 @@ section.signs .bowery-savings {
   section.signs .bowery-savings .inner p.save {
     line-height: 0.9em;
     margin-top: 2.2em; }
+  @media (max-width: 599px) {
+    section.signs .bowery-savings {
+      width: 100vw;
+      height: 83.3333333333vw;
+      border-right: none;
+      border-bottom: 1px solid; }
+      section.signs .bowery-savings .inner {
+        transform-origin: 0 0;
+        transform: translate(-125%, -125%) scale(2.5); } }
 section.signs .nypl {
   width: 50vw;
   height: 20vw;
@@ -550,13 +654,40 @@ section.signs .restroom {
   width: 50vw;
   height: 10vw;
   border-bottom: 1px solid; }
+  @media (max-width: 599px) {
+    section.signs .restroom {
+      width: 100vw;
+      height: 25vw;
+      border-right: none;
+      border-bottom: 1px solid; }
+      section.signs .restroom .inner {
+        transform-origin: 0 0;
+        transform: translate(-137.5%, -137.5%) scale(2.75); } }
 section.signs .fourty-second {
   width: 25vw;
   height: 13.3333333333vw;
   border-right: 1px solid; }
+  @media (max-width: 599px) {
+    section.signs .fourty-second {
+      width: 50vw;
+      height: 25vw;
+      border-right: none;
+      border-bottom: 1px solid; }
+      section.signs .fourty-second .inner {
+        transform-origin: 0 0;
+        transform: translate(-125%, -125%) scale(2.5); } }
 section.signs .east {
   width: 25vw;
   height: 13.3333333333vw; }
+  @media (max-width: 599px) {
+    section.signs .east {
+      width: 50vw;
+      height: 25vw;
+      border-right: none;
+      border-bottom: 1px solid; }
+      section.signs .east .inner {
+        transform-origin: 0 0;
+        transform: translate(-125%, -125%) scale(2.5); } }
 section.signs .dont-block {
   width: 50vw;
   height: 40vw;
@@ -576,6 +707,17 @@ section.signs .dont-block {
     section.signs .dont-block .inner svg line {
       stroke: #000;
       stroke-width: 0.2em; }
+  @media (max-width: 599px) {
+    section.signs .dont-block {
+      width: 100vw;
+      height: 116.6666666667vw;
+      border-right: none;
+      border-bottom: 1px solid; }
+      section.signs .dont-block .inner {
+        transform-origin: 0 0;
+        transform: translate(-150%, -150%) scale(3); }
+        section.signs .dont-block .inner svg {
+          height: 12.5vw; } }
 section.signs .holland-tunnel {
   width: 50vw;
   height: 18.3333333333vw;
@@ -584,6 +726,17 @@ section.signs .holland-tunnel {
   section.signs .holland-tunnel .inner p {
     line-height: 1em;
     letter-spacing: 0.2em; }
+  @media (max-width: 599px) {
+    section.signs .holland-tunnel {
+      width: 100vw;
+      height: 40vw;
+      border-right: none;
+      border-bottom: 1px solid; }
+      section.signs .holland-tunnel .inner {
+        transform-origin: 0 0;
+        transform: translate(-125%, -125%) scale(2.5); }
+        section.signs .holland-tunnel .inner p {
+          letter-spacing: 0.05em; } }
 section.signs .parking-tax {
   width: 28.8333333333vw;
   height: 15vw;
@@ -608,6 +761,15 @@ section.signs .bus {
   height: 10vw;
   border-right: 1px solid;
   border-bottom: 1px solid; }
+  @media (max-width: 599px) {
+    section.signs .bus {
+      width: 50vw;
+      height: 25vw;
+      border-right: 1px solid;
+      border-bottom: 1px solid; }
+      section.signs .bus .inner {
+        transform-origin: 0 0;
+        transform: translate(-150%, -150%) scale(3); } }
 section.signs .fraction {
   width: 16.6666666667vw;
   height: 16.1666666667vw;
@@ -625,6 +787,15 @@ section.signs .max-veh {
     border-radius: 0.2em; }
     section.signs .max-veh .size p {
       padding: 0.1em 0.2em; }
+  @media (max-width: 599px) {
+    section.signs .max-veh {
+      width: 50vw;
+      height: 25vw;
+      border-right: none;
+      border-bottom: 1px solid; }
+      section.signs .max-veh .inner {
+        transform-origin: 0 0;
+        transform: translate(-150%, -150%) scale(3); } }
 section.signs .col-early-bird {
   width: 33.3333333333vw; }
 section.signs .thru-traffic {
@@ -640,8 +811,17 @@ section.signs .thru-traffic {
       background: #000;
       color: #fff;
       padding: 0.1em 0.3em;
-      border-radius: 4px;
+      border-radius: 0.05em;
       letter-spacing: 0.01em; }
+  @media (max-width: 599px) {
+    section.signs .thru-traffic {
+      width: 100vw;
+      height: 100vw;
+      border-right: none;
+      border-bottom: none; }
+      section.signs .thru-traffic .inner {
+        transform-origin: 0 0;
+        transform: translate(-125%, -125%) scale(2.5); } }
 section.signs .early-bird {
   width: 33.3333333333vw;
   height: 48.3333333333vw; }
