--- a/assets/style.css
+++ b/assets/style.css
@@ -120,7 +120,7 @@ p {
   clear: both;
   display: table; }
 
-nav {
+nav, section.subnav {
   width: 100%;
   position: fixed;
   z-index: 9999;
@@ -129,47 +129,79 @@ nav {
   background: #fff;
   text-align: center;
   line-height: 48px; }
-  nav h1 a {
+  nav h1 a, section.subnav h1 a {
     display: inline-block;
     width: 48px; }
-  nav a {
+  @media (max-width: 599px) {
+    nav h1, section.subnav h1 {
+      text-align: left;
+      margin: 0 16px; } }
+  nav a, section.subnav a {
     border: 0; }
-    nav a:hover {
+    nav a:hover, section.subnav a:hover {
       animation: hrot 1.2s infinite; }
-  nav ul {
+  nav ul, section.subnav ul {
     line-height: 48px; }
-    nav ul li {
+    nav ul li, section.subnav ul li {
       display: inline-block;
       margin: 0 8px; }
-      nav ul li a {
+      @media (max-width: 599px) {
+        nav ul li, section.subnav ul li {
+          margin: 0 4px; } }
+      nav ul li a, section.subnav ul li a {
         display: block;
         text-align: center;
         width: 48px; }
-  nav .primary {
+  nav .primary, section.subnav .primary {
     position: absolute;
     left: 16px;
     top: 0;
     text-align: left; }
-  nav .secondary {
+    @media (max-width: 599px) {
+      nav .primary, section.subnav .primary {
+        left: auto;
+        right: 44px; } }
+  nav .secondary, section.subnav .secondary {
+    position: absolute;
+    right: 72px;
+    top: 0;
+    text-align: right; }
+    nav .secondary .google-fonts, section.subnav .secondary .google-fonts {
+      width: 112px; }
+    nav .secondary .github, section.subnav .secondary .github {
+      width: 56px; }
+  nav .tertiary, section.subnav .tertiary {
     position: absolute;
     right: 16px;
     top: 0;
     text-align: right; }
-    nav .secondary .google-fonts {
-      width: 112px; }
-    nav .secondary .github {
-      width: 56px; }
-    nav .secondary .camera {
+    nav .tertiary .camera, section.subnav .tertiary .camera {
       width: 24px; }
+    @media (max-width: 599px) {
+      nav .tertiary, section.subnav .tertiary {
+        right: 8px; } }
 
 section {
   border-bottom: 1px solid;
   background: #fff; }
 
+section.subnav {
+  position: static;
+  height: 96px; }
+  section.subnav ul {
+    width: 100vw;
+    text-align: right;
+    padding: 48px 16px; }
+    section.subnav ul .google-fonts {
+      width: 112px; }
+    section.subnav ul .github {
+      width: 52px; }
+
 section.hero {
+  padding-top: 48px;
   text-align: center;
   font-size: 45vw;
-  line-height: 1em;
+  line-height: 0.85em;
   cursor: pointer;
   overflow: hidden;
   -webkit-touch-callout: none;
@@ -186,14 +218,27 @@ section.hero {
   /* Non-prefixed version, currently
      supported by Chrome, Opera and Firefox */
   word-break: keep-all; }
-  section.hero .hrot, section.hero .vrot {
-    position: absolute;
+  @media (max-width: 599px) {
+    section.hero {
+      padding-top: calc(48px + 0.05em);
+      font-size: 75vw;
+      line-height: 0.75em; }
+      section.hero .chars {
+        display: inline-block;
+        letter-spacing: -0.03em; } }
+  section.hero .vars {
     font-size: 14px;
-    line-height: 24px;
-    margin-top: -36px;
-    left: 24px; }
-  section.hero .vrot {
-    left: 200px; }
+    line-height: 18px;
+    text-align: left;
+    padding: 0 24px 12px 24px; }
+    @media (max-width: 599px) {
+      section.hero .vars {
+        padding-top: 12px; } }
+    section.hero .vars .hrot, section.hero .vars .vrot {
+      display: inline-block; }
+    section.hero .vars .values {
+      display: inline-block;
+      width: 40px; }
   section.hero svg {
     position: absolute;
     top: 0;
