--- a/assets/style.scss
+++ b/assets/style.scss
@@ -105,7 +105,7 @@ p {
   clear: both;
   display: table;
 }
-nav {
+nav, section.subnav {
   width: 100%;
   position: fixed;
   z-index: 9999;
@@ -119,7 +119,10 @@ nav {
       display: inline-block;
       width: $unit * 6;
     }
-
+    @include for-phone-only {
+      text-align: left;
+      margin: 0 $unit * 2;
+    }
   }
   a {
     border: 0;
@@ -132,6 +135,9 @@ nav {
     li {
       display: inline-block;
       margin: 0 $unit;
+      @include for-phone-only {
+        margin: 0 $unit/2;
+      }
       a {
         display: block;
         text-align: center;
@@ -144,10 +150,14 @@ nav {
     left: $unit * 2;
     top: 0;
     text-align: left;
+    @include for-phone-only {
+      left: auto;
+      right: $unit * 5.5;
+    }
   }
   .secondary {
     position: absolute;
-    right: $unit * 2;
+    right: $unit * 9;
     top: 0;
     text-align: right;
     .google-fonts {
@@ -156,8 +166,17 @@ nav {
     .github {
       width: $unit * 7;
     }
+  }
+  .tertiary {
+    position: absolute;
+    right: $unit * 2;
+    top: 0;
+    text-align: right;
     .camera {
       width: $unit * 3;
+    }
+    @include for-phone-only {
+      right: $unit;
     }
   }
 }
@@ -165,10 +184,28 @@ section {
   border-bottom: 1px solid;
   background: #fff;
 }
+section.subnav {
+  position: static;
+  height: $unit * 12;
+  ul {
+    // position: absolute;
+    width: $col_width * 6;
+    // top: $unit * 6;
+    text-align: right;
+    padding: $unit * 6 $unit * 2 ;
+    .google-fonts {
+      width: $unit * 14;
+    }
+    .github {
+      width: $unit * 6.5;
+    }
+  }
+}
 section.hero {
+  padding-top: $unit * 6;
   text-align: center;
   font-size: 45vw;
-  line-height: 1em;
+  line-height: 0.85em;
   cursor: pointer;
   overflow: hidden;
   -webkit-touch-callout: none; /* iOS Safari */
@@ -179,16 +216,41 @@ section.hero {
           user-select: none; /* Non-prefixed version, currently
                                 supported by Chrome, Opera and Firefox */
   word-break: keep-all;
-  .hrot, .vrot{
-    position: absolute;
+  @include for-phone-only {
+    padding-top: calc(48px + 0.05em);
+    font-size: 75vw;
+    line-height: 0.75em;
+    .chars {
+      display: inline-block;
+      letter-spacing: -0.03em;
+    }
+  }
+  .vars {
     font-size: $font_caption;
-    line-height: $line_height;
-    margin-top: -$line_height * 1.5;
-    left: $unit * 3;
+    line-height: $line_height * 0.75;
+    text-align: left;
+    padding: 0 $unit * 3 $line_height/2 $unit * 3;
+    @include for-phone-only {
+      padding-top: $line_height/2;
+    }
+    .hrot, .vrot {
+      display: inline-block;
+    }
+    .values {
+      display: inline-block;
+      width: $unit * 5;
+    }
   }
-  .vrot {
-    left: $unit * 25;
-  }
+  // .hrot, .vrot{
+  //   position: absolute;
+  //   font-size: $font_caption;
+  //   line-height: $line_height;
+  //   margin-top: -$line_height * 1.5;
+  //   left: $unit * 3;
+  // }
+  // .vrot {
+  //   left: $unit * 25;
+  // }
   svg {
     position:absolute;
     top:0;
